--- a/layers/landuse.yaml
+++ b/layers/landuse.yaml
@@ -244,7 +244,8 @@ layers:
                 draw:
                     polygons:
                         style: landuse-tier6-parking
-                        color: [0.431,0.098,0.439]
+                        # color: [0.431,0.098,0.439]
+                        color: [0.387,0.317,0.440]
                         visible: true
             pedestrian:
                 filter:
@@ -303,7 +304,7 @@ styles:
         mix: [polygons-dots]
         shaders:
             defines:
-                DOTS_COLOR: vec3(0.192,0.113,0.854)
+                DOTS_COLOR: vec3(0.229,0.169,0.770)
                 DOTS_SCALE: 10.
                 DOTS_SIZE: 0.41
                 DOTS_STROKE: 0.15
@@ -372,7 +373,7 @@ styles:
 
                 GRID_SCALE: 20.
                 GRID_WIDTH: zoom()*.5
-                GRID_BACKGROUND_COLOR: vec3(0.286,0.239,0.400)
+                GRID_BACKGROUND_COLOR: vec3(0.254,0.262,0.423)
     landuse-tier4-manmade:
         base: polygons
         mix: [functions-zoom, polygons-diagonal-grid]
