--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -450,12 +450,12 @@ layers:
                     lines:
                         # color: [1.000,0.564,0.312]
                         color: [[9,[0.215,1.000,1.000]],[14,[0.000,0.259,0.694]],[16,[0.078,0.129,0.259]]]
-                        width: [[9,0px],[11,3px],[13,6px],[15,12px],[17,60px],[20,70m]]
+                        width: [[9,0px],[11,2px],[13,6px],[15,12px],[17,60px],[20,70m]]
                         outline:
                             style: runway-glow
                             # color: [[9,[0.965,0.929,0.341]],[16,[1.000,0.247,0.239]]]
                             color: [[9,[0.215,1.000,1.000]],[15,[0.000,0.259,0.694]]]
-                            width: [[9,1px],[20,22px]]
+                            width: [[9,1px],[11,1.5px],[20,22px]]
                 runway-detail1:
                     filter: { $zoom: { min: 12 } }
                     draw:
