--- a/layers/landuse.yaml
+++ b/layers/landuse.yaml
@@ -67,14 +67,14 @@ layers:
                         style: landuse
                         color: [0.090,0.409,1.000]
                         visible: true
-                conservation-z12:
-                    filter:
-                        $zoom: { min: 13 }
-                    draw:
-                        polygons:
-                            style: landuse-tier2-conservation-contours
-                            color: [0.263,0.933,0.494]
-                            visible: true
+                # conservation-z12:
+                #     filter:
+                #         $zoom: { min: 13 }
+                #     draw:
+                #         polygons:
+                #             style: landuse-tier2-conservation-contours
+                #             color: [0.263,0.933,0.494]
+                #             visible: true
 
                 # wilderness_areas:
                 #     filter: function() { return feature.name && feature.name.indexOf("Wilderness") > -1 }
